adding cross tables

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
     <script src="%PUBLIC_URL%/hxlBitesText.js"></script>
     <script src="%PUBLIC_URL%/hxlBitesTable.js"></script>
     <script src="%PUBLIC_URL%/hxlBitesChart.js"></script>
-    <script src="%PUBLIC_URL%/hxlBitesMap.js"></script>    
+    <script src="%PUBLIC_URL%/hxlBitesMap.js"></script>
+    <script src="%PUBLIC_URL%/hxlBitesCrossTables.js"></script>      
   </head>
   <body>
     <noscript>
