--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,14 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
     <title>HXL Bites Checker</title>
-    <script src="%PUBLIC_URL%/hxl.js"></script>
-    <script src="%PUBLIC_URL%/hxlBites.js"></script>
-    <script src="%PUBLIC_URL%/hxlBitesRender.js"></script>
-    <script src="%PUBLIC_URL%/hxlBitesText.js"></script>
-    <script src="%PUBLIC_URL%/hxlBitesTable.js"></script>
-    <script src="%PUBLIC_URL%/hxlBitesChart.js"></script>
-    <script src="%PUBLIC_URL%/hxlBitesMap.js"></script>
-    <script src="%PUBLIC_URL%/hxlBitesCrossTables.js"></script>      
+    <script src="https://rawgit.com/HXLStandard/libhxl-js/master/hxl.js"></script>
+    <script src="https://rawgit.com/SimonbJohnson/hxlbites.js/master/hxlBites.js"></script>
+    <script src="https://rawgit.com/SimonbJohnson/hxlbites.js/master/hxlBitesRender.js"></script>
+    <script src="https://rawgit.com/SimonbJohnson/hxlbites.js/master/hxlBitesText.js"></script>
+    <script src="https://rawgit.com/SimonbJohnson/hxlbites.js/master/hxlBitesTable.js"></script>
+    <script src="https://rawgit.com/SimonbJohnson/hxlbites.js/master/hxlBitesChart.js"></script>
+    <script src="https://rawgit.com/SimonbJohnson/hxlbites.js/master/hxlBitesMap.js"></script>
+    <script src="https://rawgit.com/SimonbJohnson/hxlbites.js/master/hxlBitesCrossTables.js"></script>      
   </head>
   <body>
     <noscript>
