update for new bites format

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <script src="https://rawgit.com/SimonbJohnson/hxlbites.js/master/hxlBitesText.js"></script>
     <script src="https://rawgit.com/SimonbJohnson/hxlbites.js/master/hxlBitesTable.js"></script>
     <script src="https://rawgit.com/SimonbJohnson/hxlbites.js/master/hxlBitesChart.js"></script>
+    <script src="https://rawgit.com/SimonbJohnson/hxlbites.js/master/hxlBitesTimeSeries.js"></script>
     <script src="https://rawgit.com/SimonbJohnson/hxlbites.js/master/hxlBitesMap.js"></script>
     <script src="https://rawgit.com/SimonbJohnson/hxlbites.js/master/hxlBitesCrossTables.js"></script>      
   </head>
